spacing issues

--- a/site/src/styles/pages/_locks.scss
+++ b/site/src/styles/pages/_locks.scss
@@ -27,6 +27,7 @@
     }
   }
 
-
-
+  .smart-locks-container, .row {
+    padding-bottom: 0 !important;
+  }
 }
